Do not wrap text in code block Fixes #362

--- a/_scss/hljs.scss
+++ b/_scss/hljs.scss
@@ -5,6 +5,9 @@ pre{
   display: block;
   padding: 0.5em;
   background: #ffffff;
+  overflow-x: auto;
+  word-wrap: normal;
+  white-space: pre;
 }
 
 
