--- a/css/v2.css
+++ b/css/v2.css
@@ -7380,7 +7380,10 @@ pre {
 .hljs {
   display: block;
   padding: 0.5em;
-  background: #ffffff; }
+  background: #ffffff;
+  overflow-x: auto;
+  word-wrap: normal;
+  white-space: pre; }
 
 /* Done */
 .hljs-comment,
